--- a/agenda/agenda.html
+++ b/agenda/agenda.html
@@ -29,7 +29,7 @@
         </table>
     </table>
 </body>
-<link rel="stylesheet" href="style-encaminhamento.css">
+<link rel="stylesheet" href="./style-encaminhamento.css">
 
 <script src="login.js"></script>
 <script src="validacoes.js"></script>
