--- a/encaminhamento/encaminhamento-exames.html
+++ b/encaminhamento/encaminhamento-exames.html
@@ -90,7 +90,7 @@
 
 <link rel="stylesheet" href="style-encaminhamento.css">
 
-<script src="login.js"></script>
-<script src="validacoes.js"></script>
-<script src="loading.js"></script>
+<script src="../login.js"></script>
+<script src="../validacoes.js"></script>
+<script src="../loading.js"></script>
 </html>
