--- a/cadastros/usuario/home.html
+++ b/cadastros/usuario/home.html
@@ -21,16 +21,16 @@
             <button type="button" class = "solid" id= "novo" onclick="NovoCadastro()">Novo Cadastro</button>
         </div>
         <div>
-            <button type="button" class = "solid" id= "novo" onclick="logout()">Sair</button>
+            <button type="button" class = "solid" id= "logout" onclick="logout()">Sair</button>
         </div>
     </body>
     
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../style.css">
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></scriptsrc></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></scriptsrc></script>
-    <script src="firebase-init.js"></script>
+    <script src="../../firebase-init.js"></script>
     <script src="login.js"></script>
-    <script src="validacoes.js"></script>
-    <script src="loading.js"></script>
+    <script src="../../validacoes.js"></script>
+    <script src="../../loading.js"></script>
 
 </html>
