--- a/encaminhamento/encaminhamento.html
+++ b/encaminhamento/encaminhamento.html
@@ -55,7 +55,7 @@
 
 <link rel="stylesheet" href="style-encaminhamento.css">
 
-<script src="login.js"></script>
-<script src="validacoes.js"></script>
-<script src="loading.js"></script>
+<script src="../login.js"></script>
+<script src="../validacoes.js"></script>
+<script src="../loading.js"></script>
 </html>
